--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.15.1",
     "razorpay": "^2.9.5",
     "sharp": "^0.33.5"
   }
